--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: FastAPI project
 
 nav:
-  - About: index.md
-  - Examples: examples.md
-  - Logging: logging.md
+  - about: index.md
+  - examples: examples.md
+  - logging: logging.md
 
 theme:
   name: material
@@ -11,4 +11,4 @@ theme:
     - navigation.tabs
     - search.suggest
     - search.highlight
-    - content.code.copy
+    - content.code.cop
